derive-ex-tests/tests/compile_fail/compare_op/hash_field_not_impl_hash.stderr
error[E0277]: the trait bound `NoHash: Hash` is not satisfied
 --> tests/compile_fail/compare_op/hash_field_not_impl_hash.rs:8:8
  |
8 |     x: NoHash,
  |        ^^^^^^ the trait `Hash` is not implemented for `NoHash`
  |
help: consider annotating `NoHash` with `#[derive(Hash)]`
  |
4 + #[derive(Hash)]
5 | struct NoHash;
  |
